--- a/scss/_mixins.scss
+++ b/scss/_mixins.scss
@@ -1,2 +1,19 @@
-@use "variables";
-@use "fonts";
+@import "variables";
+@import "fonts";
+
+@mixin latoFonts($size, $color, $font-weight) {
+  font-family: 'Lato', sans-serif;
+  font-weight: $font-weight;
+  font-size: $size;
+  color: $color;
+}
+
+@mixin redHatDisplayFonts($size, $font-weight) {
+  font-family: 'Red Hat Display', sans-serif;
+  font-weight: $font-weight;
+  font-size: $size;
+  color: $base-black;
+}
+
+
+
