--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,5 @@
 @import url(../styles/normalize.css);
+@use "fonts";
 @font-face {
   font-family: 'Lato';
   src: url("../fonts/lato/Lato-Bold.woff2") format("woff2"), url("../fonts/lato/Lato-Bold.woff") format("woff"), url("../fonts/lato/Lato-Bold.ttf") format("truetype");
@@ -28,3 +29,578 @@
   src: url("../fonts/redHatDisplay/RedHatDisplay-Regular.woff2") format("woff2"), url("../fonts/redHatDisplay/RedHatDisplay-Regular.woff") format("woff"), url("../fonts/redHatDisplay/RedHatDisplay-Regular.ttf") format("truetype");
   font-weight: normal;
   font-style: normal; }
+
+@use "fonts";
+@font-face {
+  font-family: 'Lato';
+  src: url("../fonts/lato/Lato-Bold.woff2") format("woff2"), url("../fonts/lato/Lato-Bold.woff") format("woff"), url("../fonts/lato/Lato-Bold.ttf") format("truetype");
+  font-weight: bold;
+  font-style: normal; }
+
+@font-face {
+  font-family: 'Lato';
+  src: url("../fonts/lato/Lato-Regular.woff2") format("woff2"), url("../fonts/lato/Lato-Regular.woff") format("woff"), url("../fonts/lato/Lato-Regular.ttf") format("truetype");
+  font-weight: normal;
+  font-style: normal; }
+
+@font-face {
+  font-family: 'Red Hat Display';
+  src: url("../fonts/redHatDisplay/RedHatDisplay-Medium.woff2") format("woff2"), url("../fonts/redHatDisplay/RedHatDisplay-Medium.woff") format("woff"), url("../fonts/redHatDisplay/RedHatDisplay-Medium.ttf") format("truetype");
+  font-weight: 500;
+  font-style: normal; }
+
+@font-face {
+  font-family: 'Red Hat Display';
+  src: url("../fonts/redHatDisplay/RedHatDisplay-SemiBold.woff2") format("woff2"), url("../fonts/redHatDisplay/RedHatDisplay-SemiBold.woff") format("woff"), url("../fonts/redHatDisplay/RedHatDisplay-SemiBold.ttf") format("truetype");
+  font-weight: 600;
+  font-style: normal; }
+
+@font-face {
+  font-family: 'Red Hat Display';
+  src: url("../fonts/redHatDisplay/RedHatDisplay-Regular.woff2") format("woff2"), url("../fonts/redHatDisplay/RedHatDisplay-Regular.woff") format("woff"), url("../fonts/redHatDisplay/RedHatDisplay-Regular.ttf") format("truetype");
+  font-weight: normal;
+  font-style: normal; }
+
+html {
+  background-color: #FFFFFF; }
+
+.wrapper {
+  width: 100%;
+  max-width: 1170px;
+  margin: 0 auto; }
+
+.heading {
+  font-family: 'Lato', sans-serif;
+  font-weight: 400;
+  font-size: 16px;
+  color: #7B7B7B;
+  letter-spacing: 0.1em; }
+  @media (min-width: 580px) and (max-width: 720px) {
+    .heading {
+      font-size: 14px; } }
+
+.description {
+  font-family: 'Lato', sans-serif;
+  font-weight: 400;
+  font-size: 16px;
+  color: #565656;
+  line-height: 27px;
+  letter-spacing: 0.05em; }
+
+.head {
+  display: flex;
+  justify-content: space-between;
+  padding-bottom: 50px;
+  align-items: center; }
+  .head__title {
+    font-family: 'Red Hat Display', sans-serif;
+    font-weight: 600;
+    font-size: 28px;
+    color: #000000;
+    letter-spacing: 0.1em; }
+
+.head-heading {
+  font-family: 'Lato', sans-serif;
+  font-weight: 400;
+  font-size: 12px;
+  color: #7B7B7B;
+  display: flex;
+  justify-content: space-between; }
+  @media (max-width: 320px) {
+    .head-heading {
+      font-size: 16px;
+      letter-spacing: 0.1em; } }
+
+.title {
+  font-family: 'Red Hat Display', sans-serif;
+  font-weight: 400;
+  font-size: 48px;
+  color: #000000;
+  letter-spacing: 0.05em; }
+
+.nav {
+  display: flex;
+  justify-content: space-between;
+  padding-top: 44px;
+  padding-bottom: 44px; }
+  @media (max-width: 849px) {
+    .nav {
+      padding-top: 32px;
+      padding-bottom: 32px; } }
+  @media (max-width: 768px) {
+    .nav {
+      padding-top: 24px;
+      padding-bottom: 24px; } }
+  .nav__menu {
+    display: flex;
+    gap: 84px;
+    align-items: center;
+    cursor: pointer; }
+    @media (max-width: 768px) {
+      .nav__menu {
+        gap: 41px;
+        align-items: flex-end; } }
+    @media (max-width: 320px) {
+      .nav__menu {
+        gap: 20px; } }
+    .nav__menu .list {
+      font-family: 'Lato', sans-serif;
+      font-weight: 400;
+      font-size: 14px;
+      color: #000000;
+      letter-spacing: 0.3em;
+      text-transform: uppercase;
+      display: flex;
+      gap: 42px; }
+      @media (max-width: 849px) {
+        .nav__menu .list {
+          display: none; } }
+      .nav__menu .list__item:hover {
+        border-bottom: 1px solid #000000; }
+  .nav__search:hover {
+    opacity: .5; }
+  .nav__hamburger {
+    width: 0;
+    height: 0;
+    opacity: 0;
+    position: absolute;
+    z-index: -100; }
+    @media (max-width: 849px) {
+      .nav__hamburger {
+        width: 34px;
+        height: 20px;
+        opacity: 1;
+        z-index: 1;
+        cursor: pointer;
+        position: relative; }
+        .nav__hamburger .check-menu {
+          cursor: pointer;
+          width: 40px;
+          height: 30px;
+          opacity: 0;
+          z-index: -100; }
+          .nav__hamburger .check-menu:checked ~ .main-menu {
+            max-height: 500px;
+            font-size: 16px; }
+          .nav__hamburger .check-menu:checked ~ .first {
+            display: none; }
+          .nav__hamburger .check-menu:checked ~ .second {
+            transform: rotate(45deg); }
+          .nav__hamburger .check-menu:checked ~ .third {
+            transform: rotate(-45deg); }
+          .nav__hamburger .check-menu:checked ~ .fourth {
+            display: none; }
+        .nav__hamburger .burger-line {
+          position: absolute;
+          top: -3px;
+          right: 0;
+          width: 34px;
+          height: 2px;
+          background: #000000; }
+        .nav__hamburger .second, .nav__hamburger .third {
+          top: 6px; }
+        .nav__hamburger .fourth {
+          top: 15px; }
+        .nav__hamburger .main-menu {
+          cursor: pointer;
+          display: block;
+          position: absolute;
+          bottom: 0;
+          right: 0;
+          transform: translateY(100%);
+          text-align: center;
+          margin-bottom: -10px;
+          max-height: 0;
+          font-size: 0;
+          overflow: hidden;
+          transition: .5s all; }
+          .nav__hamburger .main-menu a {
+            font-family: 'Lato', sans-serif;
+            font-weight: 400;
+            font-size: 14px;
+            color: #000000;
+            letter-spacing: 0.3em;
+            text-transform: uppercase;
+            cursor: pointer;
+            display: block;
+            width: 300px;
+            padding: 10px;
+            color: #000000;
+            text-decoration: none;
+            border-top: 1px solid #000000;
+            background-color: white; }
+            .nav__hamburger .main-menu a:hover {
+              background-color: #CCCCCC; } }
+
+.first-screen {
+  background-image: url("../assets/bg-image.svg");
+  background-repeat: no-repeat;
+  height: 600px; }
+  @media (max-width: 768px) {
+    .first-screen {
+      background-image: url("../assets/bg-image-screen700.svg");
+      height: 320px; } }
+  @media (max-width: 320px) {
+    .first-screen {
+      background-image: url("../assets/bg-image-screen-320.svg");
+      height: 500px; } }
+  .first-screen__title {
+    font-family: 'Red Hat Display', sans-serif;
+    font-weight: 600;
+    font-size: 48px;
+    color: #000000;
+    max-width: 770px;
+    line-height: 64px;
+    letter-spacing: 0.05em;
+    padding-top: 100px;
+    text-align: left; }
+    @media (max-width: 768px) {
+      .first-screen__title {
+        padding-top: 30px;
+        max-width: 700px;
+        font-size: 36px;
+        line-height: 50px; } }
+    @media (max-width: 320px) {
+      .first-screen__title {
+        padding-top: 70px;
+        max-width: 300px;
+        font-size: 30px; } }
+
+.blog .title {
+  padding-top: 90px;
+  padding-bottom: 50px; }
+  @media (max-width: 768px) {
+    .blog .title {
+      padding-top: 70px; } }
+  @media (max-width: 320px) {
+    .blog .title {
+      text-align: center; } }
+
+.blog__content {
+  display: grid;
+  grid-template-rows: auto;
+  gap: 50px; }
+  @media (max-width: 320px) {
+    .blog__content .reverse {
+      grid-template-areas: "grid-up" "grid-down"; }
+      .blog__content .reverse .up {
+        grid-area: grid-down; }
+      .blog__content .reverse .down {
+        grid-area: grid-up; } }
+  .blog__content .blog__content-info {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-gap: 30px;
+    align-items: center; }
+    @media (max-width: 768px) {
+      .blog__content .blog__content-info {
+        grid-gap: 20px; } }
+    @media (max-width: 320px) {
+      .blog__content .blog__content-info {
+        grid-template-columns: 1fr;
+        grid-gap: 37px; } }
+  .blog__content .blog-subtitle {
+    font-family: 'Red Hat Display', sans-serif;
+    font-weight: 500;
+    font-size: 23px;
+    color: #000000;
+    letter-spacing: 0.1em;
+    padding-top: 30px;
+    padding-bottom: 15px;
+    line-height: 38px; }
+    @media (max-width: 768px) {
+      .blog__content .blog-subtitle {
+        font-size: 22px;
+        padding-top: 20px;
+        padding-bottom: 10px; } }
+    @media (max-width: 320px) {
+      .blog__content .blog-subtitle {
+        padding-top: 30px; } }
+    @media (min-width: 580px) and (max-width: 720px) {
+      .blog__content .blog-subtitle {
+        font-size: 18px;
+        padding-top: 15px;
+        padding-bottom: 10px;
+        line-height: 34px; } }
+  .blog__content .description {
+    padding-top: 50px; }
+    @media (max-width: 768px) {
+      .blog__content .description {
+        padding-top: 30px;
+        font-size: 14px;
+        line-height: 24px; } }
+    @media (max-width: 320px) {
+      .blog__content .description {
+        padding-top: 40px; } }
+    @media (min-width: 580px) and (max-width: 720px) {
+      .blog__content .description {
+        font-size: 12px;
+        line-height: 22px;
+        padding-top: 24px; } }
+
+.latest-posts {
+  padding-top: 90px;
+  padding-bottom: 112px; }
+  @media (max-width: 768px) {
+    .latest-posts {
+      padding-top: 70px;
+      padding-bottom: 66px; } }
+  @media (max-width: 320px) {
+    .latest-posts {
+      padding-bottom: 70px; } }
+  @media (max-width: 320px) {
+    .latest-posts .head {
+      flex-direction: column;
+      gap: 10px;
+      padding-bottom: 30px; } }
+  .latest-posts__content {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-column-gap: 30px; }
+    @media (max-width: 768px) {
+      .latest-posts__content {
+        grid-template-columns: 1fr;
+        grid-gap: 30px; } }
+    @media (max-width: 320px) {
+      .latest-posts__content {
+        grid-gap: 50px; } }
+  @media (max-width: 768px) {
+    .latest-posts .content-posts {
+      display: grid;
+      grid-template-columns: 1fr 1fr;
+      grid-gap: 20px; }
+      .latest-posts .content-posts:nth-child(2) {
+        grid-template-areas: "grid-left grid-right"; }
+        .latest-posts .content-posts:nth-child(2) .left {
+          grid-area: grid-right; }
+        .latest-posts .content-posts:nth-child(2) .right {
+          grid-area: grid-left; } }
+  @media (max-width: 768px) and (max-width: 320px) {
+    .latest-posts .content-posts {
+      grid-template-columns: 1fr;
+      grid-gap: 25px; }
+      .latest-posts .content-posts:nth-last-child(2) {
+        grid-template-areas: "grid-left" "grid-right"; }
+        .latest-posts .content-posts:nth-last-child(2) .left {
+          grid-area: grid-left; }
+        .latest-posts .content-posts:nth-last-child(2) .right {
+          grid-area: grid-right; } }
+  .latest-posts .content-posts__head {
+    display: flex;
+    justify-content: space-between;
+    padding-top: 25px;
+    padding-bottom: 26px; }
+    @media (max-width: 768px) {
+      .latest-posts .content-posts__head {
+        padding-top: 0; } }
+    @media (max-width: 320px) {
+      .latest-posts .content-posts__head {
+        padding-bottom: 25px; } }
+  .latest-posts .content-posts__subtitle {
+    font-family: 'Red Hat Display', sans-serif;
+    font-weight: 500;
+    font-size: 22px;
+    color: #000000;
+    padding-bottom: 20px;
+    letter-spacing: 0.1em; }
+
+.popular .head {
+  padding-bottom: 46px; }
+  @media (max-width: 320px) {
+    .popular .head {
+      flex-direction: column;
+      gap: 10px;
+      padding-bottom: 30px; } }
+
+.popular__content {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-gap: 30px; }
+  @media (max-width: 768px) {
+    .popular__content {
+      grid-gap: 20px; } }
+  @media (max-width: 320px) {
+    .popular__content {
+      grid-template-columns: 1fr;
+      grid-gap: 50px; } }
+  .popular__content .popular-info__head {
+    display: flex;
+    justify-content: space-between;
+    padding-top: 20px;
+    padding-bottom: 20px; }
+    @media (max-width: 320px) {
+      .popular__content .popular-info__head {
+        padding-top: 22px;
+        padding-bottom: 12px; } }
+  .popular__content .popular-info__subtitle {
+    font-family: 'Red Hat Display', sans-serif;
+    font-weight: 500;
+    font-size: 24px;
+    color: #000000;
+    line-height: 40px;
+    letter-spacing: 0.1em;
+    padding-bottom: 20px; }
+    @media (max-width: 768px) {
+      .popular__content .popular-info__subtitle {
+        font-size: 22px; } }
+    @media (max-width: 320px) {
+      .popular__content .popular-info__subtitle {
+        line-height: 37px;
+        padding-bottom: 10px; } }
+
+.button {
+  text-align: center;
+  cursor: pointer;
+  padding-top: 54px; }
+  @media (max-width: 768px) {
+    .button {
+      padding-top: 65px; } }
+  @media (max-width: 320px) {
+    .button {
+      padding-top: 50px; } }
+  .button__btn {
+    font-family: 'Lato', sans-serif;
+    font-weight: 700;
+    font-size: 16px;
+    color: #FFFFFF;
+    letter-spacing: 0.1em;
+    padding: 10px 45px;
+    background: #565656; }
+    .button__btn:hover {
+      background-color: #000000; }
+
+.info {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-gap: 230px;
+  padding-top: 90px;
+  padding-bottom: 90px; }
+  @media (max-width: 768px) {
+    .info {
+      grid-template-columns: 1fr;
+      gap: 50px;
+      padding-top: 70px;
+      padding-bottom: 70px; } }
+  @media (max-width: 320px) {
+    .info {
+      gap: 25px; } }
+  .info__leftContent {
+    font-family: 'Red Hat Display', sans-serif;
+    font-weight: 400;
+    font-size: 23px;
+    color: #000000;
+    line-height: 38px;
+    letter-spacing: 0.1em; }
+    @media (max-width: 320px) {
+      .info__leftContent {
+        font-size: 24px;
+        line-height: 40px; } }
+  .info__rightContent {
+    font-family: 'Lato', sans-serif;
+    font-weight: 400;
+    font-size: 19px;
+    color: #565656;
+    line-height: 32px;
+    letter-spacing: 0.05em;
+    display: flex;
+    flex-direction: column;
+    gap: 47px; }
+    @media (max-width: 768px) {
+      .info__rightContent {
+        text-align: right;
+        gap: 35px; } }
+    @media (max-width: 320px) {
+      .info__rightContent {
+        text-align: start;
+        font-size: 18px; } }
+    @media (min-width: 510px) and (max-width: 650px) {
+      .info__rightContent {
+        text-align: start;
+        font-size: 18px; } }
+
+.footer {
+  background-color: #F4F4F4;
+  padding-bottom: 30px; }
+  .footer .footer-content {
+    display: flex;
+    justify-content: space-between; }
+    @media (max-width: 768px) {
+      .footer .footer-content {
+        display: flex;
+        flex-direction: column;
+        text-align: center; } }
+    .footer .footer-content__leftScreen .title {
+      padding-top: 70px;
+      padding-bottom: 30px; }
+      @media (max-width: 320px) {
+        .footer .footer-content__leftScreen .title {
+          font-size: 32px;
+          padding-top: 50px;
+          padding-bottom: 20px; } }
+    .footer .footer-content__leftScreen .contacts {
+      font-family: 'Lato', sans-serif;
+      font-weight: 400;
+      font-size: 16px;
+      color: #000000;
+      letter-spacing: 0.1em;
+      display: flex;
+      flex-direction: column;
+      gap: 15px;
+      cursor: pointer; }
+      @media (max-width: 320px) {
+        .footer .footer-content__leftScreen .contacts {
+          font-size: 18px; } }
+      .footer .footer-content__leftScreen .contacts .contact:hover {
+        opacity: .5; }
+    .footer .footer-content__rightScreen {
+      display: flex;
+      gap: 23px;
+      padding-top: 125px;
+      justify-content: center; }
+      @media (max-width: 768px) {
+        .footer .footer-content__rightScreen {
+          padding-top: 52px; } }
+      @media (max-width: 320px) {
+        .footer .footer-content__rightScreen {
+          padding-top: 40px; } }
+      .footer .footer-content__rightScreen .right-content__svg {
+        cursor: pointer; }
+        .footer .footer-content__rightScreen .right-content__svg:hover {
+          background-color: #565656; }
+          .footer .footer-content__rightScreen .right-content__svg:hover .fill {
+            fill: #FFFFFF; }
+  .footer__copyright {
+    font-family: 'Lato', sans-serif;
+    font-weight: 400;
+    font-size: 12px;
+    color: #000000;
+    letter-spacing: 0.1em;
+    text-align: center;
+    padding-top: 26px; }
+    @media (max-width: 768px) {
+      .footer__copyright {
+        padding-top: 40px; } }
+    @media (max-width: 320px) {
+      .footer__copyright {
+        font-size: 16px;
+        line-height: 27px; } }
+
+@media screen and (max-width: 1170px) {
+  .wrapper {
+    padding-right: 20px;
+    padding-left: 20px; } }
+
+@media screen and (max-width: 768px) {
+  .wrapper {
+    padding-left: 34px;
+    padding-right: 34px; } }
+
+@media screen and (max-width: 655px) {
+  .wrapper {
+    padding-left: 15px;
+    padding-right: 15px; } }
+
+@media screen and (max-width: 375px) {
+  .wrapper {
+    padding-left: 10px;
+    padding-right: 10px; } }
