--- a/styles/normalize.css
+++ b/styles/normalize.css
@@ -13,13 +13,15 @@ a {
 
 * {
     box-sizing: border-box;
+    transition: all .1s ease-in;
 }
 
 *:where(
-    :not(html, iframe, canvas, img, svg, video, audio):not(svg , symbol )
+    :not(html, iframe, canvas, img, video, audio):not(svg, symbol)
   ) {
-    all: unset;
+    /*all: unset;*/
     display: revert;
+    margin: 0;
 }
 
 *,
@@ -28,10 +30,11 @@ a {
     box-sizing: border-box;
 }
 
-a,
-button {
+*:where(a,button) {
     cursor: pointer;
     outline: none;
+    all: unset;
+    display: revert;
 }
 
 ol,
