--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -334,10 +334,10 @@ html {
       }
 
       @include rwd(580px, 720px) {
-        font-size: 18px;
+        font-size: 17px;
         padding-top: 15px;
         padding-bottom: 10px;
-        line-height: 34px;
+        line-height: 32px;
       }
 
     }
@@ -358,7 +358,7 @@ html {
       @include rwd(580px, 720px) {
         font-size: 12px;
         line-height: 22px;
-        padding-top: 24px;
+        padding-top: 20px;
       }
     }
   }
@@ -728,3 +728,63 @@ html {
     padding-right: 10px;
   }
 }
+
+.hamburger {
+  display: none;
+}
+
+.bar {
+  display: block;
+  width: 25px;
+  height: 3px;
+  margin: 5px auto;
+  -webkit-transition: all 0.3s ease-in-out;
+  transition: all 0.3s ease-in-out;
+  background-color: #101010;
+}
+
+@media only screen and (max-width: 768px) {
+  .list {
+    position: fixed;
+    left: -100%;
+    top: 5rem;
+    flex-direction: column;
+    background-color: #fff;
+    width: 100%;
+    border-radius: 10px;
+    text-align: center;
+    transition: 0.3s;
+    box-shadow: 0 10px 27px rgba(0, 0, 0, 0.05);
+  }
+
+  .list.active {
+    left: 0;
+  }
+
+  .list__item {
+    margin: 2.5rem 0;
+  }
+
+  .hamburger {
+    display: block;
+    cursor: pointer;
+  }
+
+  .hamburger.active {
+    .bar:nth-child(2) {
+      opacity: 0;
+    }
+  }
+  .hamburger.active {
+    .bar:nth-child(1) {
+      transform: translateY(8px) rotate(45deg);
+    }
+  }
+  .hamburger.active {
+    .bar:nth-child(3) {
+      transform: translateY(-8px) rotate(-45deg);
+    }
+  }
+}
+
+
